improve spacing on captcha and fix spelling error in business

--- a/locator-form-frontend/src/components/layout/styles.css
+++ b/locator-form-frontend/src/components/layout/styles.css
@@ -1073,6 +1073,10 @@ label.checkbox {
   display: none;
 }
 
+.captcha {
+  padding: 1rem 0rem;
+}
+
 @page {
   size: Letter;
 }
